# sendouq_analysis

./: .gitignore  LOO_IMPLEMENTATION_SUMMARY.md  README.md  dockerfile  example_rankings.py  out.txt  pyproject.toml  requirements.txt  test_dense_proper_final.py
.github/workflows/: build_scraper.yml  fix_tournaments.yml  repull_tournament.yml  run_aggregator.yml  run_ranked.yml  run_scraper.yml  run_weekly_loo.yml
codex_scripts/: import_enrichment_cache.py
dockerfiles/: build.dockerfile  docker-compose.ranked.yml  docker-compose.update.yml  docker-compose.weekly.yml  scrape.crontab  scrape.dockerfile  scrape.yaml
dockerfiles/ranked/: Dockerfile  entrypoint.sh
dockerfiles/update/: Dockerfile  entrypoint.sh
dockerfiles/weekly/: Dockerfile  entrypoint.sh
docs/: data_schemas.md  id_migration_and_players_appearances.md  index.md  plus_server_validation.md  team_seeding_guide.md
docs/api/: cross-validation.md  loss-functions.md
docs/evaluation/: cross-validation.md  index.md  loss-functions.md  metrics.md  optimization.md
docs/getting-started/: quickstart.md
examples/: evaluate_pagerank_circuit.py  evaluate_pagerank_final.py  evaluate_pagerank_realistic.py  generate_double_elimination.py  generate_synthetic_tournament.py  team_seeding_example.py
scripts/: weekly_missing_scraper.py
sendouq_analysis/: constants.py  utils.py
sendouq_analysis/constants/: __init__.py  data.py  json_keys.py  preferences.py
sendouq_analysis/ingest/: parse.py  scrape.py
sendouq_analysis/transforms/: player.py
src/rankings/: README.md  __init__.py  _legacy_inputs.py  calibration.py  config.yaml  main.py  tournament_predictor.py
src/sendouq_analysis/: scrape_tournament.py  utils.py
src/sendouq_dashboard/: __main__.py  app.py
src/synthetic_data/: README_tournament_schedules.md  __init__.py  data_serializer.py  match_score_fixer.py  match_simulator.py  pagerank_evaluator.py  player_generator.py  tournament_circuit.py  tournament_generator.py  tournament_schedules.py  validator.py  weighted_correlation.py
terraform/: scraper.tf
terraform/aggregator/: aggregator.tf
terraform/digitalocean_infra/: main.tf
terraform/ranked/: ranked.tf
terraform/scraper/: cloud-init.yml  main.tf  scraper.tf
tests/: test_appearances_alt_keys.py  test_appearances_extraction.py  test_appearances_wrapped_payload.py  test_backfill_daily.py  test_compile_e2e.py  test_convert_options_and_byes.py  test_convert_with_appearances.py  test_db_import_upsert_players.py  test_double_elimination.py  test_evaluation.py  test_filter_strict_4v4.py  test_filter_strict_4v4_dedup.py  test_filter_strict_4v4_none.py  test_load_match_appearances.py  test_loaders_monkeypatch.py  test_loss_improvements.py  test_loss_improvements_v2.py  test_player_stats.py  test_scraper_image_versioning_workflows.py  test_sentry_init.py  test_spaces_upload.py  test_spaces_upload_s3_uri.py  test_sql_engine_env_url.py  test_sql_load_loo_impacts_df.py  test_sql_load_matches_query.py  test_sql_load_players_df.py  test_storage_save_tournament_batch.py  test_synthetic_data.py  test_update_e2e.py  test_update_e2e_persist_db_calls.py  test_update_e2e_upload_dry_run.py  test_update_parse_ts_to_ms.py  test_views_schema_validation.py  test_weekly_loo.py  test_weekly_loo_workflow.py  test_weighting_integration.py  test_weighting_schemes.py
tests/evaluation/: __init__.py  test_loss_refactor.py  test_metrics_extras.py  (+1 more)
(+209 files in other folders)
