[tool.poetry]
name = "sendouq-analysis"
version = "0.1.0"
description = ""
authors = ["Cesar E Garza <cesar@cegarza.com>"]
readme = "README.md"
packages = [{include = "sendouq_analysis", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.3"
numpy = "^1.26.2"
scipy = "^1.11.4"
seaborn = "^0.13.0"
scikit-learn = "^1.3.2"
plotly = "^5.18.0"
nbformat = "^5.9.2"
statsmodels = "^0.14.0"
requests = "^2.31.0"
tqdm = "^4.66.1"
dash = "^2.14.2"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.25"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
isort = "^5.12.0"
ipykernel = "^6.27.1"
genson = "^1.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 80
