[tool.poetry]
name = "sendouq-analytics"
version = "0.1.0"
description = ""
authors = ["Cesar E Garza <cesar@cegarza.com>"]
readme = "README.md"
packages = [
    {include = "sendouq_analysis", from = "src"},
    {include = "sendouq_dashboard", from = "src"},
    {include = "rankings", from = "src"},
]
include = [
    { path = "src/rankings/config.yaml", format = "wheel" },
    { path = "src/rankings/config.yaml", format = "sdist" },
]


[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.3"
numpy = "^1.26.2"
scipy = "^1.12.0"
seaborn = "^0.13.0"
scikit-learn = "^1.3.2"
plotly = "^5.18.0"
nbformat = "^5.9.2"
statsmodels = "^0.14.0"
requests = "^2.31.0"
tqdm = "^4.66.1"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.25"
certifi = "^2024.2.2"
pyarrow = "^15.0.0"
dash = "^2.15.0"
polars = "^0.20.0"
pyyaml = "^6.0.1"
boto3 = "^1.34.0"
sentry-sdk = "^1.45.0"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
isort = "^5.12.0"
ipykernel = "^6.27.1"
genson = "^1.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
scrape = "sendouq_analysis.endpoints.scrape:update_database"
aggregate = "sendouq_analysis.endpoints.aggregate:run"
debug_dashboard = "sendouq_dashboard.app:debug_run"
scrape_weekly = "rankings.cli.weekly:main"
ranked = "rankings.cli.ranked:main"
rankings_import = "rankings.cli.db_import:main"
rankings_compile = "rankings.cli.compile:main"
rankings_update = "rankings.cli.update:main"
rankings_db_init = "rankings.cli.db_init:main"
rankings_pull = "rankings.cli.pull:main"
rankings_repull = "rankings.cli.repull:main"
rankings_fix_tournaments = "rankings.cli.fix_tournaments:main"
rankings_db_schema = "rankings.cli.schema:main"
rankings_backfill_daily = "rankings.cli.backfill_daily:main"

[tool.black]
line-length = 80
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 80

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
